[package]
name = "rtxmail"
version = "0.1.5"
edition = "2021"
description = "腾讯企业邮箱rust版本sdk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shenshouer/rtxmail-rs"
keywords = ["email"]

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1.56"

[dev-dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
